# finance-os

./: .env.example  .gitignore  AGENTS.md  APP.md  BOOTSTRAP.md  POSTINSTALL.en.md  POSTINSTALL.es.md  POSTINSTALL.md  README.md  docker-compose.yml  manifest.json
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .gitignore  pyproject.toml
backend/app/: database.py  database_ext.py  main.py  mcp_server.py  models.py  schemas.py  utils.py
backend/app/routes/: categories.py  imports.py  movements.py  settings.py
backend/app/services/: bootstrap.py  classification.py  classification_memory.py  extract_movements.py  import_movements.py  integrity.py  settings.py  xlsx_to_csv.py
backend/scripts/: delete_movement.py  edit_movement.py  import_movements.py  init_db.py  list_categories.py  list_movements.py  seed.py  upsert_categories.py  verify.py  verify_data_integrity.py
backend/scripts/data/migration_finance/: categories.json  categories_raw.txt  movements.csv  movements_raw.txt
backend/src/app/: currency_formats.json  database_ext.py  main.py  mcp_server.py  models.py  schemas.py
backend/src/app/routes/: assistant.py  budgets.py  categories.py  health.py  imports.py  movements.py  settings.py
backend/src/app/services/: classification_memory.py  document_preprocessor.py  import_movements.py  integrity.py  settings.py  xls_to_csv.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_backend_business_specs.py  test_budgets_specs.py  test_import_services_specs.py  test_mcp_and_migrations_specs.py  test_route_edge_specs.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: assert-browser-clean.mjs
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/ai/: AiSubscriptionProvider.tsx
frontend/src/api/: assistant.ts  budgets.ts  categories.ts  client.test.ts  client.ts  imports.ts  locale.test.ts  movements.ts  remoteTunnel.ts  settings.ts  types.ts  utils.test.ts  utils.ts  wrappers.test.ts
frontend/src/app/: App.tsx  AppShell.tsx
frontend/src/components/: AppShell.tsx  BudgetView.tsx  ClassificationEditor.tsx  DashboardMetrics.tsx  DashboardView.tsx  LLMSettingsTab.tsx  MovementsTable.tsx  MovementsUploader.tsx  ReviewCard.tsx  SettingsView.tsx
frontend/src/i18n/: en.ts  es.ts  index.tsx
scripts/: package_app.sh  validate_agents_contract.py
skills/forger-locale-module/: SKILL.md
skills/load-movements/: MEMORY.md  SKILL.md
skills/stack-database-extension/: SKILL.md
(+9 files in other folders)
