[project]
name = "finance-os-backend"
version = "0.1.0"
description = "FastAPI backend for Finance OS, a personal finance tool."
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "pyright==1.1.380",
  "ruff==0.6.8",
  "uvicorn[standard]==0.30.6",
  "sqlmodel==0.0.22",
  "pydantic==2.9.2",
  "python-multipart==0.0.12",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pyright]
include = ["app", "scripts"]
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = true
reportAssignmentType = false
reportArgumentType = false
reportCallIssue = false
