[project]
name = "finance-os-lite-backend"
version = "0.1.0"
description = "FastAPI backend for FinanceOS Lite, a personal finance tool."
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pyright==1.1.380",
  "ruff==0.6.8",
  "uvicorn[standard]==0.30.6",
  "sqlmodel==0.0.22",
  "pydantic==2.9.2",
  "python-multipart==0.0.12",
  "openpyxl==3.1.5",
  "xlrd==2.0.1",
  "pypdf==6.4.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pyright]
include = ["src/app", "scripts"]
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = true
reportAssignmentType = false
reportArgumentType = false
reportCallIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=100",
  "-ra",
]
markers = [
  "bdd: backend business behavior specs written as Given/When/Then scenarios.",
]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = [
  "src/app/cors.py",
  "src/app/database.py",
  "src/app/database_ext.py",
  "src/app/forger_desktop.py",
  "src/app/health.py",
  "src/app/mcp_runtime.py",
  "src/app/remote_tunnel.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pragma: no cover",
]
